PR16005, avr linker crash on a particular instruction sequence with --relax

It's possible for relax_delete_bytes to be called with section
contents NULL, as demonstrated by the testcase in this PR.

	PR 16005
	* elf32-avr.c (elf32_avr_relax_delete_bytes): Get section contents
	if not already available.